# windowsagent

./: .gitignore  ARCHITECTURE.md  CLAUDE-CODE-BRIEF.md  CLAUDE.md  CONVERSATION-HANDOFF.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.claude/plans/: current_mission.md  error-recovery.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: app_profile_request.md  bug_report.md
docs/: DEEP-RESEARCH-AND-PLAN.md  GUI-VOICE-DECISION-BRIEF.md  PROJECT-BRIEF.md  S-GRADE-FEATURES.md  generate_brief_pdf.py  research.md
docs/plans/: 2026-02-23-phase1-foundation.md
docs/superpowers/plans/: 2026-03-18-gui-voice-mcp.md  2026-03-19-colour-scheme-active-element.md  2026-03-19-uia-overlay.md
profiles/community/: README.md
skills/: README.md
skills/cursor/: windowsagent.mdc
skills/mcp/: bridge.py  windowsagent.json
skills/openclaw/windowsagent-chrome/: SKILL.md
skills/openclaw/windowsagent-clipboard/: SKILL.md
skills/openclaw/windowsagent-edge/: SKILL.md
skills/openclaw/windowsagent-explorer/: SKILL.md
skills/openclaw/windowsagent-notepad/: SKILL.md
skills/openclaw/windowsagent-outlook/: SKILL.md
skills/openclaw/windowsagent-powershell/: SKILL.md
skills/openclaw/windowsagent-screenshot/: SKILL.md
skills/openclaw/windowsagent-teams/: SKILL.md
skills/openclaw/windowsagent-vscode/: SKILL.md
skills/openclaw/windowsagent-whatsapp/: SKILL.md
tests/: __init__.py  test_actor.py  test_browser.py  test_cli.py  test_community_profiles.py  test_grounder.py  test_input_actor.py  test_mcp_server.py  test_observer.py  test_overlay.py  test_profile_dispatch.py  test_recovery.py  test_replay.py  test_server.py  test_sse.py  test_verifier.py  test_voice_pipeline.py  test_voice_stt.py  test_window_manager.py
tests/apps/: __init__.py  test_file_explorer.py  test_notepad.py
windowsagent/: __init__.py  _server_state.py  agent.py  agent_actions.py  agent_loop.py  agent_types.py  cli.py  config.py  exceptions.py  mcp_server.py  recorder.py  recovery.py  replay.py  server.py  window_manager.py
windowsagent/actor/: __init__.py  clipboard.py  input_actor.py  uia_actor.py
windowsagent/apps/: __init__.py  base.py  chrome.py  edge.py  excel.py  file_explorer.py  generic.py  notepad.py  outlook.py  powershell.py  teams.py  vscode.py  webview2.py  whatsapp.py
windowsagent/apps/community/: CONTRIBUTING.md  __init__.py  _template.py  _template_meta.yml
windowsagent/browser/: __init__.py  grounder.py  launcher.py  virtual_page.py
windowsagent/grounder/: __init__.py  hybrid.py  uia_grounder.py  vision_grounder.py
windowsagent/observer/: __init__.py  ocr.py  screenshot.py  screenshot_backends.py  state.py  uia.py  uia_internals.py  uia_types.py  uia_windows.py
windowsagent/overlay/: __init__.py  colours.py  inspector.py  renderer.py  widget.py
windowsagent/planner/: __init__.py  prompts.py  task_planner.py
windowsagent/routes/: agent.py  browser.py  system.py  window.py
windowsagent/verifier/: __init__.py  verify.py
windowsagent/voice/: __init__.py  pipeline.py  stt.py
