[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "windowsagent"
version = "0.1.0"
description = "Open-source AI agent for Windows desktop automation using the accessibility tree"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ibraheem Mustafa", email = "ibraheem@smallgiants.studio"},
]
keywords = ["windows", "automation", "accessibility", "ai-agent", "desktop", "uia", "pywinauto"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Desktop Environment",
]

dependencies = [
    "pywinauto>=0.6.8",
    "pyautogui>=0.9.54",
    "pywinctl>=0.4",
    "mss>=9.0",
    "Pillow>=10.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "click>=8.1",
    "pydantic>=2.0",
    "psutil>=5.9",
    "pywin32>=306",
]

[project.optional-dependencies]
vision = [
    "google-genai>=0.1.0",
    "anthropic>=0.40.0",
]
mcp = [
    "mcp[cli]>=1.0",
    "httpx>=0.27",
]
voice = [
    "faster-whisper>=1.0",
    "sounddevice>=0.4",
    "httpx>=0.27",
]
browser = [
    "playwright>=1.40",
    "httpx>=0.27",
]
overlay = [
    "PyQt6>=6.5",
]
ocr = [
    "pytesseract>=0.3.10",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.4.0",
    "mypy>=1.9",
    "types-Pillow",
    "types-psutil",
]

[project.scripts]
windowsagent = "windowsagent.cli:main"

[project.urls]
Homepage = "https://github.com/ibraheem4/windowsagent"
Repository = "https://github.com/ibraheem4/windowsagent"
Issues = "https://github.com/ibraheem4/windowsagent/issues"
Documentation = "https://github.com/ibraheem4/windowsagent/blob/main/ARCHITECTURE.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require real Windows applications (deselect with '-m \"not integration\"')",
]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "RUF"]
ignore = [
    "E501",  # Line length handled by formatter
    "B008",  # Do not perform function call in default argument
    "UP007", # Use X | Y for union types (conflicts with 3.10 support)
]

[tool.mypy]
strict = true
python_version = "3.10"
ignore_missing_imports = true
exclude = ["tests/"]

[tool.coverage.run]
source = ["windowsagent"]
omit = ["windowsagent/planner/*", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.windowsagent]
# Default configuration for this project
# Override individual settings here or via environment variables
log_level = "INFO"
